--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
                 font-family: 'Courier New', Courier, monospace;
                 color: green;
             }
+            textarea{
+                font-weight: bold;
+                font-family: 'Courier New', Courier, monospace;
+                color: green;
+            }
             select{
                 font-weight: bold;
                 font-family: 'Courier New', Courier, monospace;
